<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context=".signupActivity"
    android:orientation="vertical"
    android:background="#fff"
    android:padding="30sp"

     >

    <ImageView
        android:id="@+id/signup_back_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="5sp"
        android:src="@drawable/left_arrow"

        android:contentDescription="TODO" />

    <TextView
        android:id="@+id/signup_txt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:fontFamily="@font/muli_black"
        android:text="@string/create_account_login"
        android:textAllCaps="true"
        android:textColor="@color/black"
        android:textSize="40sp"


        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="23dp"
        android:layout_marginBottom="10dp"
        android:orientation="vertical">

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/fullname"
            android:hint="@string/full_name"
            app:hintTextColor="@color/black"
            app:boxStrokeColor="@color/black"
            app:boxStrokeWidthFocused="2dp"
            app:startIconDrawable="@drawable/pencil"
            app:startIconTint="@color/blue"
            app:endIconMode="clear_text"
            app:endIconTint="@color/black"

            android:layout_marginBottom="8sp"

            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/muli" />
        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/username"
            android:hint="@string/username"
            app:hintTextColor="@color/black"
            app:boxStrokeColor="@color/black"
            app:boxStrokeWidthFocused="2dp"
            app:startIconDrawable="@drawable/user"
            app:startIconTint="@color/blue"
            app:endIconMode="clear_text"
            app:endIconTint="@color/black"
            android:layout_marginBottom="8sp"

            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/muli"
                android:inputType="text" />
        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/Email"
            android:hint="@string/email"
            app:hintTextColor="@color/black"
            app:boxStrokeColor="@color/black"
            app:boxStrokeWidthFocused="2dp"
            app:startIconDrawable="@drawable/email"
            app:startIconTint="@color/blue"
            app:endIconMode="clear_text"
            app:endIconTint="@color/black"
            android:layout_marginBottom="8sp"

            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/muli"
                android:inputType="textEmailAddress" />
        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/password"
            android:hint="@string/password"
            app:hintTextColor="@color/black"
            app:boxStrokeColor="@color/black"
            app:boxStrokeWidthFocused="2dp"
            app:startIconDrawable="@drawable/key"
            app:startIconTint="@color/blue"
            app:endIconMode="password_toggle"
            app:endIconTint="@color/blue"
            android:layout_marginBottom="8sp"

            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/muli"
                android:inputType="textPassword" />

        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/purpose"
            android:hint="@string/doctor_or_patient"
            app:hintTextColor="@color/black"
            app:boxStrokeColor="@color/black"
            app:boxStrokeWidthFocused="2dp"

            app:startIconTint="@color/blue"
            app:endIconMode="clear_text"
            app:endIconTint="@color/blue"
            android:layout_marginBottom="8sp"

            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/muli"
                android:inputType="text" />

        </com.google.android.material.textfield.TextInputLayout>

<!--        <TextView-->
<!--            android:id="@+id/role_txt"-->
<!--            android:layout_width="wrap_content"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:text="Choose your purpose"-->
<!--            android:textColor="#676767"-->
<!--            android:textSize="18sp"-->


<!--            />-->
<!--        <RadioGroup-->
<!--            android:layout_width="wrap_content"-->
<!--            android:layout_height="match_parent"-->
<!--            android:orientation="horizontal"-->
<!--            android:layout_gravity="center"-->
<!--            android:layout_marginTop="10dp"-->
<!--            android:paddingRight="5dp"-->
<!--            android:id="@+id/role"-->
<!--            >-->

<!--            <RadioButton-->
<!--                android:id="@+id/patient"-->
<!--                android:layout_width="136dp"-->
<!--                android:layout_height="wrap_content"-->
<!--                android:text="Patient"-->
<!--                android:buttonTint="@color/blue"-->
<!--                />-->

<!--            <RadioButton-->
<!--                android:id="@+id/Doctor"-->
<!--                android:layout_width="114dp"-->
<!--                android:layout_height="wrap_content"-->
<!--                android:text="Doctor"-->
<!--                android:buttonTint="@color/blue"/>-->
<!--        </RadioGroup>-->

        <Button
            android:id="@+id/next_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:background="@drawable/bg_btn"
            android:elevation="5dp"
            android:text="@string/next"
            android:textColor="@color/white" />

        <Button
            android:id="@+id/login_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:background="@drawable/bg_btn_2"
            android:elevation="5dp"
            android:text="@string/login"
            android:textColor="@color/blue"

            />

    </LinearLayout>
</LinearLayout>